added JavaFX ui proof of concept